--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^24.9.0",
+    "rgb-hex": "^3.0.0",
     "sinon-chrome": "^3.0.1"
   }
 }
